tests/ui/core_checkpoint_kind_reintroduction.stderr
error[E0432]: unresolved imports `hibana::integration::cap::control::CheckpointKind`, `hibana::integration::cap::control::CommitKind`, `hibana::integration::cap::control::RollbackKind`
 --> tests/ui/core_checkpoint_kind_reintroduction.rs:1:41
  |
1 | use hibana::integration::cap::control::{CheckpointKind, CommitKind, RollbackKind};
  |                                         ^^^^^^^^^^^^^^  ^^^^^^^^^^  ^^^^^^^^^^^^ no `RollbackKind` in `integration::buckets::cap::control`
  |                                         |               |
  |                                         |               no `CommitKind` in `integration::buckets::cap::control`
  |                                         no `CheckpointKind` in `integration::buckets::cap::control`
